Added a setting to toggle dynamic arena generation